--- a/index.html
+++ b/index.html
@@ -1,1 +1,229 @@
 
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>
+    </title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="vanish; relinquish; freedom;">
+    <link rel="canonical" href="index.html">
+    <link rel="publisher" href="loot.cc">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="loot">
+    <meta property="og:description" content="loot#1337">
+    <meta property="og:url" content="index.html">
+    <meta property="og:site_name" content="loot">
+    <meta property="article:publisher" content="loot.cc>
+    <link rel="shortcut icon" href="" type="https://api.upload.systems/images/IKWgjMoK/download" />
+    <meta property="og:image:url" content="">
+    <meta property="og:image:secure_url" content="">
+    <meta property="og:image" content="">
+    <meta name="theme-color" content="#141F1D">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:title" content="">
+
+    <link rel="dns-prefetch" href="https://s.w.org/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+        <link rel="stylesheet" href="main1.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&amp;display=swap" rel="stylesheet">
+
+    <script src="js/jq.js"></script>
+    <script src="js/blockinspect.js"></script>
+
+    <style>
+        html {
+            font-family: 'Roboto', 'Segoe UI', 'Tahoma', sans-serif;
+            font-weight: 200;
+            color: rgb(255, 255, 255);
+        }
+
+        .title {
+            font-size: 90px;
+            font-weight: 200;
+            margin-bottom: 25px;
+        }
+
+        .b {
+            font-size: 25px;
+            font-weight: 100;
+            margin-top: 2px;
+            margin-bottom: 2px;
+        }
+
+        .bg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-size: cover;
+            opacity: 0.2;
+        }
+
+        .text_container_main {
+            position: relative;
+            min-height: 80vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 2;
+        }
+
+        .dimmed {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            z-index: 2;
+
+            font-size: 11px;
+            font-weight: 100;
+            opacity: 0.08;
+        }
+
+        .dimmed p {
+            margin-bottom: 0;
+            margin-top: 0;
+        }
+
+        canvas {
+            position: absolute;
+            width: 99%;
+            height: 99%;
+        }
+        a{
+            color: rgb(134, 22, 22);
+            text-decoration: none;
+        }
+        a:visited{
+            color: rgb(134, 22, 22);
+            text-decoration: none;
+        }
+        a:hover{
+            -moz-text-decoration-line: blink;
+            color: red;
+        }
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+  vertical-align: middle;
+}
+video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -9999;
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+  transition: 1s opacity;
+}
+
+.video {
+  overflow: hidden;
+}
+.video-fallback {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+body {
+  overflow: hidden;
+}
+    </style>
+</head>
+
+
+<body>
+
+<canvas id="canvas"></canvas>
+    <div id="player" style="position: fixed; z-index: -99; width: 100%; background-color: black; opacity: 6%"></div>
+
+ 
+
+    <video autoplay="" loop="" playsinline="" src="" id="vid1">
+        <source src="https://api.upload.systems/images/7FT8TCc0/download" type="video/mp4">
+    </video>
+        <script>
+            var vid = document.getElementById("vid1");
+            function myFuncbotion() {
+                vid.play();
+            }
+            document.body.addEventListener('click', myFuncbotion)
+        </script>
+
+<div class="text_container_main">
+    <div>
+        <center>
+            <p class="title">censor.ga</p>
+        </center>
+        <center><p class="b"><span style="color: rgb(255, 255, 255);"> contact me</span> <span style="color: red;"> below.</span><b style="color: red;"> </b>.</p></center>
+        <center><p class="b"><span style="color: rgb(255, 255, 255);">loot#1337   elle#9001
+        </span> </p></center>
+			<center><p class="b"> </p><center>
+
+	<center><p class="b" id="clock"></p><center>
+ <a href="https://extort.ga"><i class="fas fa-compass fa-2x"></i></a>
+ <a href="loot@fbi.systems"><i class="fab fa-discord fa-2x"></i></a>
+ <a href="5zd"><i class="fas fa-mobile fa-2x"></i></
+ <a href="https://t.me/gorepage"><i class="fas fa-telegram fa-2x"></i></a>
+    </div>
+</div>
+
+<div class="footer">
+    
+    <center><a>© loot@fbi.systems</a></center>
+</div>
+
+
+
+<div class="bg"></div>
+<script src="rain.js"></script>
+
+</body>
+
+<script>
+var videos = [
+"https://api.upload.systems/images/7FT8TCc0/download",
+]
+document.querySelector("#vid1").src = videos[Math.floor(Math.random() * videos.length)];
+
+</script>
+<script>
+function currentTime() {
+  var date = new Date(); 
+  var hour = date.getHours();
+  var min = date.getMinutes();
+  var sec = date.getSeconds();
+  hour = updateTime(hour);
+  min = updateTime(min);
+  sec = updateTime(sec);
+  document.getElementById("clock").innerText = hour + " : " + min + " : " + sec; 
+    var t = setTimeout(function(){ currentTime() }, 1000); 
+}
+
+function updateTime(k) {
+  if (k < 10) {
+    return "0" + k;
+  }
+  else {
+    return k;
+  }
+}
+
+currentTime()
+</html>
