--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:title" content="loot">
-    <meta property="og:description" content="loot#1337">
+    <meta property="og:description" content="loot#1337 elle#9001">
     <meta property="og:url" content="index.html">
     <meta property="og:site_name" content="loot">
     <meta property="article:publisher" content="loot.cc>
