--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <title>REVENGE</title>
   <link rel="icon" type="image/png" href="funny.png">
 </head>
+ <link rel="icon" href="orsrAXVq (1).png">
+    <meta content="loot" property="og:title" />
+        <meta content="https://api.upload.systems/images/orsrAXVq/download" property="og:image">
+        <meta content="#c9654b" data-react-helmet="true" name="theme-color" />
+        <meta content="loot site" property="og:description">
 
 <body>
   <center>
