--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     }
   </style>
   <title>REVENGE</title>
-  <link rel="icon" type="image/png" href="funny.png">
+  <link rel="icon" type="image/png" href="zx.jpg">
 </head>
  <link rel="icon" href="orsrAXVq (1).png">
     <meta content="t.me/gorepage" property="og:title" />
