--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <link rel="stylesheet" href="style.css"/>
   <style>
     body {
-      background-image: url('hello.gif');
+      background-image: url('rr.gif');
     }
   </style>
   <title>REVENGE</title>
-  <link rel="icon" type="image/png" href="zx.jpg">
+  <link rel="icon" type="image/png" href="cult.png">
 </head>
  <link rel="icon" href="orsrAXVq (1).png">
     <meta content="t.me/gorepage" property="og:title" />
@@ -18,7 +18,7 @@
 <body>
   <center>
     <br><br>
-    <img id="symbol" src="zx.jpg" width=75 length=75/>
+    <img id="symbol" src="cult.png" width=75 length=75/>
     <br><br>
     <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
     <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
