--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h3 class="fade-in-text" id="2" style="color:gold; font-family:'Courier New', Courier, monospace" hidden="true"><b>loot</b></h3>
       <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash</h4>
       <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki</h4>
-      <h5 class="fade-in-text" id="5" style="color:rgb(253, 7, 7); font-family:'Courier New', Courier, monospace" hidden="true">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+      <h5 class="fade-in-text" id="5" style="color:rgb(253, 7, 7); ', Courier, monospace" hidden="true">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░          ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░                        ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
         ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░                                ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
@@ -110,7 +110,7 @@
         ░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒██████████████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓░░  ░░        ▒▒▒▒▒▒░░▒▒░░▒▒▒▒▒▒▒▒▒▒▒▒░░░░
         ░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒██████████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░        ▒▒▒▒▒▒░░▒▒▒▒░░░░▒▒▒▒▒▒▒▒▒▒░░
         </h4>
-      <h4 id="5" class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><a style="color:white;text-decoration:none" href=""><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>gallery</a></h4>
+      <h4 id="5" class="fade-in-text" id="4" style="color:white; , Courier, monospace" hidden="true"><a style="color:white;text-decoration:none" href=""><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>gallery</a></h4>
     </center>
   </body>
   
