--- a/index.html
+++ b/index.html
@@ -24,7 +24,41 @@
       <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
       <h3 class="fade-in-text" id="2" style="color:gold; font-family:'Courier New', Courier, monospace" hidden="true"><b>loot</b></h3>
       <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash</h4>
-      <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki</h4>
+      <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">>		   FNM
+		   ___
+		 		                                 .:-==--:.                                               
+				                             .-+#%%%%%%%%%%%#+:                                           
+				                           :*%%%%%%%%%%%%%%%%%%#=                                         
+				                          *%%%%%%%%%%%%%%%%%%%%%%#:                                       
+				                         *%%%%%%%%%%%%%%%%%%%%%%%%%-                                      
+				                        =%%%%%%%%%%%%%%%%%%%%%%%%%%%.                                     
+				                       .%%+#%%%%%%%%%%%%%%##%%%%%%%%+                                     
+				                       +%%###%%#%%#%%*###*###%%%%%%%%.                                    
+				                      .%%%%%%%%%*%%#%%%%%%%%%%%%%%%%%*                                    
+				                      +*%%%%%%%#-*%%+#*#%%%%%%%%%%%%%#-                                   
+				                     ::-%%%%%%*+..##+.+:-*#%%%%%%%%%%%-:                                  
+				                    :. =%%%%%#- . .      .:*#%%%%%%%%%* :                                 
+				                  .    -%%%%=-::-      :-:.===%%%%%##%%: .                                
+				                 .     -%%%%#::.   ..    :.:-*%%%%%%%%%* .                                
+				                .      *%%%%%#.   .-.::     +%%%%%%%%%%%= .                               
+				               .      :%%%%%%%#=. ::..::. .=*%%%%##%%%%%%=:                               
+				               .      **%%#%%%%%%*.-+..::-+:=%%%%%%%##%%%%*                               
+				              .      -*-%%%%+.+*## -::.   -:#%%%%%%#*: :#%%+                              
+				              :      + :%%%##. **=  .=     #%%%%##%+.   +%%%+                             
+				              ..    -. .%%%-:#: *:  ::.    *%%%*##-.    -%%%%*::.                         
+				               -   ..   #%%- -%=--  . =.   -#*##%+.     =%%%%%= .-:::.                    
+				                :. *   .%%*.  :#+=    ##.   *%+#=.      =%%%%%%:                          
+				                  .%   -%%. :  :*-   =%#*   .-=%-...   ..%%%%%%%.                         
+				                  .#   *%+      -    +%%#-   :*%-     :  +%%%%%*=                         
+				                   *.  #%+--:.  :   .-%%=:    -+#-:---.  :%%%%#%#                         
+				                   .- .%%#=::-+=    :.*%#-:    :++-..-+==-%%%%%%#.                        
+				                    . :##%*   :     .:-#*#=     ..    :+*%%%%+*%+.                        
+				                      :%%%+  :     : ::#-*#.     ..   *%%%%%= *#-.                        
+				                       %#++ -.     :  ++--%+      .. .%%%%*: :*=                          
+				                       =*:- .     .-.:-#*##%-      - +%%%%.  =.                           
+				                        == :     .....:=%#::-:      :###*:  .                             
+				                         .:::  :+-   . .-:....::   ..#+=:                                 
+			.  .:**      :::::... . .  --.   </h4>
       
         </h4>
       <h4 id="5" class="fade-in-text" id="4" style="color:white; , Courier, monospace" hidden="true"><a style="color:white;text-decoration:none" href=""><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>gallery</a></h4>
