--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         background-image: url('rr.gif');
       }
     </style>
-    <title>REVENGE</title>
+    <title>#cult</title>
     <link rel="icon" type="image/png" href="cult.png">
   </head>
    <link rel="icon" href="orsrAXVq (1).png">
