--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <br><br>
       <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
       <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
-      <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot</b></h3>
-      <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash</h4>
-      <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki</h4>
+      <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot#1337</b></h3>
+      <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash#1337</h4>
+      <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
       
         </h4>
       <h4 id="5" class="fade-in-text" id="4" style="color:white; , Courier, monospace" hidden="true"><a style="color:white;text-decoration:none" href=""><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>gallery</a></h4>
