--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <link rel="icon" href="orsrAXVq (1).png">
       <meta content="t.me/gorepage" property="og:title" />
           <meta content="https://api.upload.systems/images/orsrAXVq/download" property="og:image">
-          <meta content="#c9654b" data-react-helmet="true" name="theme-color" />
+          <meta content="#000000" data-react-helmet="true" name="theme-color" />
           <meta content="loot tenaki flash" property="og:description">
   
   <body>
