--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
       
         </h4>
-        <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">leakage</h4>
+        <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">#cult</h4>
        </center>
     </body>
     
