--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
    <link rel="icon" href="orsrAXVq (1).png">
       <meta content="t.me/gorepage" property="og:title" />
-          <meta content="https://api.upload.systems/images/0b5NBUfx/download" property="og:image">
+          <meta content="https://api.upload.systems/images/0b5NBUfx/download" property="og:video">
           <meta content="#000000" data-react-helmet="true" name="theme-color" />
           <meta content="loot tenaki flash" property="og:description">
   
