--- a/index.html
+++ b/index.html
@@ -1,63 +1,62 @@
 
 <head>
-    <link rel="stylesheet" href="style.css"/>
-    <style>
-      body {
-        background-image: url('rr.gif');
-      }
-    </style>
-    <title>#cult</title>
-    <link rel="icon" type="image/png" href="cult.png">
-  </head>
-   <link rel="icon" href="orsrAXVq (1).png">
-      <meta content="t.me/gorepage" property="og:title" />
-          <meta content="https://api.upload.systems/images/0b5NBUfx/download" property="og:video">
-          <meta content="#000000" data-react-helmet="true" name="theme-color" />
-          <meta content="loot tenaki flash" property="og:description">
-  
-  <body>
-    <center>
-      <br><br>
-      <img id="symbol" src="cult.png" width=75 length=75/>
-      <br><br>
-      <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
-      <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
-      <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot#1337</b></h3>
-      <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash#1337</h4>
-      <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
-      
-        </h4>
-        <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">#cult</h4>
-       </center>
-    </body>
-   
-  <script>
-    document.onkeydown = function(e) {
-    if(event.keyCode == 123) {
-        return false;
+  <link rel="stylesheet" href="style.css"/>
+  <style>
+    body {
+      background-image: url('rr.gif');
     }
-    if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-        return false;
+  </style>
+  <title>#cult</title>
+  <link rel="icon" type="image/png" href="cult.png">
+</head>
+ <link rel="icon" href="orsrAXVq (1).png">
+    <meta content="t.me/gorepage" property="og:title" />
+        <meta content="https://api.upload.systems/images/0b5NBUfx/download" property="og:video">
+        <meta content="#000000" data-react-helmet="true" name="theme-color" />
+        <meta content=" " property="og:description">
+
+<body>
+  <center>
+    <br><br>
+    <img id="symbol" src="cult.png" width=75 length=75/>
+    <br><br>
+    <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
+    <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
+    <h3 class="fade-in-text" id="2" style="color:rgb(251, 255, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot#1337</b></h3>
+    <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash#1337</h4>
+    <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
+    
+      </h4>
+      <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">#cult</h4>
+     </center>
+  </body>
+ 
+<script>
+  document.onkeydown = function(e) {
+  if(event.keyCode == 123) {
+      return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+      return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+      return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+      return false;
+  }
+  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+      return false;
+  }
+  }
+  document.addEventListener('contextmenu', function(e) {
+  e.preventDefault();
+  });
+
+  function playAudio(source) {
+        const audio = new Audio()
+        audio.src = source
+        audio.loop == true
+        audio.play()
     }
-    if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-        return false;
-    }
-    if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-        return false;
-    }
-    if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-        return false;
-    }
-    }
-    document.addEventListener('contextmenu', function(e) {
-    e.preventDefault();
-    });
-  
-    function playAudio(source) {
-          const audio = new Audio()
-          audio.src = source
-          audio.loop == true
-          audio.play()
-      }
-  </script>
-  
+</script>
