--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <br><br>
     <img id="symbol" src="cult.png" width=75 length=75/>
     <br><br>
-    <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
+    <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=false;document.getElementById('6').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
     <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
     <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot#1337</b></h3>
     <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash#1337</h4>
     <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
-    <h4 class="fade-in-text" id="5" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">nives#0001</h4>
+    <h4 class="fade-in-text" id="6" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">nives#0001</h4>
     
       </h4>
-      <h4 class="fade-in-text" id="5" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">#cult</h5>
+      <h4 class="fade-in-text" id="5" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">#cult</h4>
      </center>
   </body>
  
