--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <meta content=" " property="og:description">
 
 <body>
+  <center><a href="https://censor.cf/conzone" target="_blank"<h2 style="color: #FFFF00; display: inline-block; background-image: url('attachments/987149728800198686/991834200309248070/sparkle.gif');">conzone</h2>
+                                                                                <div class="verified-icon"><img src="../assets/media/verified.svg"
+                                                            class="verified-icon-image verified-icon-image-dark" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                <div class="crown"><img src="../assets/media/crown.png"
+                                                            class="crown" style="position: absolute; margin-top: -19px; height: 15px; right: 47%;"></div>
   <center>
     <br><br>
     <img id="symbol" src="cult.png" width=75 length=75/>
