--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         <meta content=" " property="og:description">
 
 <body>
-  <center><a href="https://censor.cf/loot" target="_blank"<h2 style="color: #FFFF00; display: inline-block; background-image: url('attachments/987149728800198686/991834200309248070/sparkle.gif');">conzone</h2>
-                                                                                <div class="verified-icon"><img src="../assets/media/verified.svg"
-                                                            class="verified-icon-image verified-icon-image-dark" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                <div class="crown"><img src="../assets/media/crown.png"
-                                                            class="crown" style="position: absolute; margin-top: -19px; height: 15px; right: 47%;"></div>
+  
   <center>
     <br><br>
     <img id="symbol" src="cult.png" width=75 length=75/>
@@ -29,7 +26,7 @@
     <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot#1337</b></h3>
     <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash#1337</h4>
     <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
-    <h4 class="fade-in-text" id="6" <a href="https://censor.cf/loot" target="_blank"<h2 style="color: #FFFF00; display: inline-block; background-image: url('attachments/987149728800198686/991834200309248070/sparkle.gif');">conzone</h2>
+    <h4 class="fade-in-text" id="6" <a href="https://censor.cf/loot" target="_blank"<h2 style="color: #FFFF00; display: inline-block; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">conzone</h2>
                                                                                 <div class="verified-icon"><img src="../assets/media/verified.svg"
                                                             class="verified-icon-image verified-icon-image-dark" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                <div class="crown"><img src="../assets/media/crown.png"
                                                             class="crown" style="position: absolute; margin-top: -19px; height: 15px; right: 47%;"></div>
