--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
     <h4 class="fade-in-text" id="6" <a href="https://censor.cf/loot.html" target="_blank"<h2 style="color: #FFFF00; display: inline-block; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">conzone</h2>
                                                                                 <div class="verified-icon"><img src="../assets/media/verified.svg"
-                                                            class="verified-icon-image verified-icon-image-dark" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                <div class="crown"><img src="../assets/media/crown.png"
+                                                            class="verified-icon-image verified-icon-image-dark" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                <div class="crown"><img src="orsrAXVq.png"
                                                             class="crown" style="position: absolute; margin-top: -19px; height: 15px; right: 47%;"></div>
     
       </h4>
