--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
     <br><br>
     <img id="symbol" src="cult.png" width=75 length=75/>
     <br><br>
-    <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=false;document.getElementById('6').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
+    <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=false;document.getElementById('6').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
     <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
     <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot#1337</b></h3>
     <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash#1337</h4>
     <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
-    <h4 class="fade-in-text" id="6" <a href="https://censor.cf/loot.html" target="_blank"<h2 style="color: #FFFF00; display: inline-block; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">conzone</h2>
-                                                                                <div class="verified-icon"><img src="../assets/media/verified.svg"
-                                                            class="verified-icon-image verified-icon-image-dark" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                <div class="crown"><img src="orsrAXVq.png"
-                                                            class="crown" style="position: absolute; margin-top: -19px; height: 15px; right: 47%;"></div>
+    <h4 class="fade-in-text" id="6" 
     
       </h4>
       <h4 class="fade-in-text" id="5" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">nives#0001</h4>
