--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br><br>
     <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');" onclick="playAudio('song.mp3');document.getElementById('button').hidden=true;document.getElementById('1').hidden=false;document.getElementById('2').hidden=false;document.getElementById('3').hidden=false;document.getElementById('4').hidden=false;document.getElementById('5').hidden=false;document.getElementById('6').hidden=true"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>click to enter</button>
     <h1 class="fade-in-text" id="1" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true"><b>censor.cf</b></h1>
-    <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" hidden="true"><b>loot#1337</b></h3>
+    <h3 class="fade-in-text" id="2" style="color:rgb(255, 0, 0); font-family:'Courier New', Courier, monospace" ;background:url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif') hidden="true"><b>loot#1337</b></h3>
     <h4 class="fade-in-text" id="3" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">flash#1337</h4>
     <h4 class="fade-in-text" id="4" style="color:white; font-family:'Courier New', Courier, monospace" hidden="true">tenaki#0001</h4>
     <h4 class="fade-in-text" id="6" 
