--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     }
   </style>
   <title>#cult</title>
-  <link rel="icon" type="image/png" href="cult.gif">
+  <link rel="icon" type="image/png" href="orsrAXVq.png">
 </head>
  <link rel="icon" href="orsrAXVq (1).png">
     <meta content="t.me/gorepage" property="og:title" />
