--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <center><a href="https://discord.gg/czbyZEbArC" target="_blank"<h2 style="color: #FFFF00; display: inline-block; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">discord server</h2>
                                                                                 <div class="discord"><img src="discord.png"
-                                                            class="discord" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                <div class="discord"><img src="discord.png"
+                                                            class="discord" style="position: absolute; margin-top: -19px; height: 15px; right: 46%;"></div>                                                                                
                                                             class="discord" style="position: absolute; margin-top: -19px; height: 15px; right: 47%;"></div>
   <center>
     <br><br>
