--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <head>
+  <link rel="icon" href="cult.png" type="image/png" sizes="16x16">
   <link rel="stylesheet" href="style.css"/>
   <style>
     body {
